@@ -272,6 +272,10 @@
       <id>arq</id>
       <activation>
         <activeByDefault>false</activeByDefault>
+        <property>
+          <name>arqProfileActivated</name>
+          <value>true</value>
+        </property>
       </activation>
       <dependencies>
         <dependency>
@@ -461,6 +465,22 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+        <id>jdk17</id>
+        <activation>
+            <jdk>[17,)</jdk>
+            <!-- The add-opens is only needed for something in test(s?) that are in ran with "arq" profile so limit to that -->
+            <property>
+              <name>arqProfileActivated</name>
+              <value>true</value>
+            </property>
+        </activation>
+        <properties>
+            <jvm.args.modular>
+                --add-opens=java.base/java.util=ALL-UNNAMED
+            </jvm.args.modular>
+        </properties>
     </profile>
   </profiles>
 </project>
